app/css/nav.scss
// Basic Styling

.list-unstyled {
  list-style: none;
}

.navbar-left{
  float: left;
  margin-left: 10px;
}

.navbar-right {
  float: right;
  margin-left: 10px;
}

/******************** Mobile ********************/
.navbar-brand.logo {
  padding: 15px 10px 0px 10px;
}

.navbar-header{
  width: 100%;
  -webkit-transform: translatex(0%);
  transform: translatex(0%);
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.navbar-header.show {
  position: fixed;
  z-index: 100000;
  -webkit-transform: translatex(72%);
  transform: translatex(72%);
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.nav__side--toggle {
  position: relative;
  margin-right: 15px;
  padding: 9px 10px;
  margin-top: 8px;
  margin-bottom: 0px;
  background-color: transparent;
  background-image: none;
  border-bottom: 1px solid transparent;
  border-color: #ddd;
  z-index: 10000;
  border-radius: 4px;
}

.nav__side--toggle .icon-bar {
  background-color: #888;
  width: 22px;
  height: 3px;
  display: block;
  margin: 3px 0px;
}

/* Sidebar nav */

.side-nav {
  position: absolute;
  z-index: 100000;
  padding-left: 15%;
  -webkit-transform: translatex(-115%);
  transform: translatex(-115%);
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.side-nav.show {
  -webkit-transform: translatex(-20%);
  transform: translatex(-11%);
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.side-nav__search {
  margin-top: 10px;
  margin-bottom: 10px;
  padding-left: 10px;
}

.side-nav__dropdown {
  position: absolute;
  width: 100%;
  padding: 0;
  z-index: 10000;
  font-size: 14px;
  background: #eaeced;
  color: #323232;
  border-radius: 0px;
  border: none;
  position: relative;
  float: none;
  box-shadow: inset 0 1px 10px rgba(50, 50, 50,0.1);
  -webkit-box-shadow: inset 0 1px 10px rgba(0,0,0,0.1);
  -moz-box-shadow: inset 0 1px 10px rgba(0,0,0,0.1);
  -ms-box-shadow: inset 0 1px 10px rgba(0,0,0,0.1);
  -o-box-shadow: inset 0 1px 10px rgba(0,0,0,0.1);
  box-shadow: inset 0 1px 10px rgba(0,0,0,0.1);
}

.side-nav__subnav {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  display: none;
  float: left;
  min-width: 160px;
  padding: 5px 0;
  margin: 2px 0 0;
  list-style: none;
  font-size: 14px;
  border: 1px solid #ccc;
  border: 1px solid rgba(0,0,0,.15);
  border-radius: 4px;
  background-clip: padding-box;
}

.side-nav__subnav--item .heading__item, .side-nav__subnav--item .heading__item:hover {
  text-transform: none;
}

.side-nav__dropdown--item.open .side-nav__subnav{
  position: static;
  float: none;
  width: auto;
  margin-top: 0;
  background-color: transparent;
  border: 0;
  display: block;
}


.heading__title, .nav .open > a.heading__title {
  color: #4c4c4c;
  display: block;
  padding: 17px 15px;
  background: #f9f9f9;
  -webkit-box-shadow: inset -7px 0 9px -7px rgba(0,0,0,0.175);
  box-shadow: inset -7px 0 9px -7px rgba(0,0,0,0.175);
  text-transform: uppercase;
  border-bottom: 1px solid #ddd;
  text-decoration: none;
}

.heading__item, .heading__item:hover {
  padding: 10px;
  text-transform: uppercase;
  color: #4c4c4c;
  background: none;
  line-height: 25px;
  width: 100%;
  display: block;
}


/******************** Desktop ********************/

.navbar__dropdown {
  padding: 10px;
  display: block;
}

.navbar__dropdown--subnav {
  top: -100000px;
  opacity: 0;
  position: absolute;
  display: block;
  width: auto;
  background-color: #fff;
  border: solid #cfcdcd 1px;
}

.navbar__dropdown--item{
  display: inline;
  font-size: 80%;
  &:hover {
    color: #fff;
    display: inline-block;
    > .navbar__dropdown--subnav {
      top: 80px;
      opacity: 1;
      padding: 0;
      position: absolute;
      z-index: 10000000;
      transition: opacity .2s ease 0.1s, top .2s ease 0.1s;
      .heading__item {
        text-transform: none;
        color: #292929;
        padding: 5px 7px 5px 25px;
        display: block;
        /*background: url(/img/icon_nav_li.png) no-repeat 14px 8px;*/
        font-size: 12px;
        white-space: normal;
        font-weight: bold;
      }
    }
  }
}

.navbar__dropdown--subnav--item {
  display: inline-block;
  padding: 10px 15px 10px 0;
  &:first-child {
    background: #eee;
  }
}

.navbar__dropdown--item:hover > .navbar--heading__title {
  color: #fff;
  @include gradient(#7AA8C2, #4A81A0);

  &:after {
    content: "";
    display: block;
    position: absolute;
    left: 10px;
    bottom: -10px;
    width: 0;
    height: 0;
    border-color: #4A81A0 transparent transparent transparent;
    border-style: solid;
    border-width: 5px;
  }
}

.navbar--heading__title{
  display: inline-block;
  position: relative;
  margin-bottom: 50px;
  padding: 4px 10px 4px 10px;
  border-radius: 4px;
  text-transform: uppercase;
}

.navbar__dropdown--subnav__list{
  padding: 0;
}

.navbar__dropdown--subnav__list--item {
  margin: 0;
  padding: 5px 7px 5px 25px;
  border: none;
  background: none;
  &:hover a {
    color: #b05c30;
    text-decoration: underline;
  }
  &:before {
    content:">";
    color: #bbb;
  }
}

.navbar--login {
  float: right;
  background-color: #fff;
  &:hover {
    a.dropdown-toggle:after {
      content: "";
      opacity: 0;
    }
  }
  .btn {
    background: none;
  }
  .dropdown-menu {
    left: calc(100% - 300px);
    width: 300px;
  }
}

.navbar--login__dropdown  {
  opacity: 0;
  display: block;
  position: absolute;
  right: 0;
  top: -170%;
  border: 1px solid #ccc;
  background-color: #fff;
  z-index: -1000000;
  -webkit-transition: opacity 0.2s, top 0.75s;
  transition: opacity 0.2s, top 0.75s;
}

.navbar--login__dropdown.toggleOpen {
  opacity: 1;
  top: 80%;
   z-index: 1000000;
  -webkit-transition: opacity 0.2s, top 0.75s;
  transition: opacity 0.2s, top 0.75s;
}

.navbar--login__input {
  margin: 10px 0;
}

.btn.navbar--login__submit {
  color: #fff;
  @include gradient(#7AA8C2, #4A81A0);
}

/***** Desktop Nav ****
@media only all and (min-device-width : 1024px) {
.side-nav, .nav__side--toggle { display: none; }
.navbar { display: block; }
}

/***** Mobile Nav *****/
// iPhone
@media only all and (min-device-width : 320px) and (max-device-width : 768px) {
  
}

